SUBDIRS = src 

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
evg.pc 

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
evg.pc 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = evg.pc
ACLOCAL_AMFLAGS = -I m4
