## Process this file with automake to produce Makefile.in

SUBDIRS = src 

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
ecore_li.pc 

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
libuio.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libuio.pc
ACLOCAL_AMFLAGS = -I m4
