## Process this file with automake to produce Makefile.in

SUBDIRS = src 

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
config.guess \
config.h.in \
config.sub \
configure \
install-sh \
ltconfig \
ltmain.sh \
missing mkinstalldirs \
stamp-h.in \
build-stamp \
configure-stamp \
depcomp \
emm.pc 

EXTRA_DIST = \
AUTHORS \
COPYING \
gendoc \
Doxyfile \
README \
emm.pc.in \
emm.spec.in \
emm.spec 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = emm.pc
ACLOCAL_AMFLAGS = -I m4
