AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(efl-sharp, 0.0.1)
AM_MAINTAINER_MODE

PACKAGE_VERSION=efl-sharp
AC_SUBST(PACKAGE_VERSION)

AC_CHECK_TOOL(CC, gcc, gcc)
AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL

# Set STDC_HEADERS
AC_HEADER_STDC
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL

dnl pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi

dnl C# compiler
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, mcs, no)
CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

#dnl ecore
#ECORE_REQUIRED_VERSION=0.9.9.007
#PKG_CHECK_MODULES(ECORE, ecore >= $ECORE_REQUIRED_VERSION)

#dnl evas    
#EVAS_REQUIRED_VERSION=0.9.9.007
#PKG_CHECK_MODULES(EVAS, evas >= $EVAS_REQUIRED_VERSION)

#dnl edje    
#EDJE_REQUIRED_VERSION=0.5.0.007
#PKG_CHECK_MODULES(EDJE, edje >= $EDJE_REQUIRED_VERSION)

#dnl ewl    
#EWL_REQUIRED_VERSION=0.0.4.003
#PKG_CHECK_MODULES(EWL, ewl >= $EWL_REQUIRED_VERSION)

if test "x${exec_prefix}" = "xNONE"; then
  if test "x${prefix}" = "xNONE"; then
    bindir="${ac_default_prefix}/bin";
  else
    bindir="${prefix}/bin";
  fi
else
  if test "x${prefix}" = "xNONE"; then
    bindir="${ac_default_prefix}/bin";
  else
    bindir="${prefix}/bin";
  fi
fi

if test "x${exec_prefix}" = "xNONE"; then
  if test "x${prefix}" = "xNONE"; then
    libdir="${ac_default_prefix}/lib";
  else
    libdir="${prefix}/lib";
  fi
else
  if test "x${prefix}" = "xNONE"; then
    libdir="${ac_default_prefix}/lib";
  else
    libdir="${prefix}/lib";
  fi
fi

if test "x${exec_prefix}" = "xNONE"; then
  if test "x${prefix}" = "xNONE"; then
    pkgdatadir="${ac_default_prefix}/share/${PACKAGE}";
  else
    pkgdatadir="${prefix}/share/${PACKAGE}";
  fi
else
  if test "x${prefix}" = "xNONE"; then
    pkgdatadir="${ac_default_prefix}/share/${PACKAGE}";
  else
    pkgdatadir="${prefix}/share/${PACKAGE}";
  fi
fi

ecore_libs=`pkg-config --libs ecore`
ecore_cflags=`pkg-config --cflags ecore`

DATADIR="${pkgdatadir}"
AC_SUBST(DATADIR)
AC_SUBST(ecore_libs)
AC_SUBST(ecore_cflags)

AC_SUBST(MCS)

AC_OUTPUT([
Makefile
efl-sharp.pc
src/Makefile
src/bin/AssemblyInfo.cs
src/bin/data.cs
src/bin/Makefile
src/lib/Makefile
src/lib/glue/Makefile
src/lib/AssemblyInfo.cs
data/Makefile
data/fonts/Makefile
data/test/Makefile
data/test/images/Makefile
data/test/src/Makefile
])
