MAINTAINERCLEANFILES = Makefile.in

EKEKOHEADERS = \
ekeko_main.h \
ekeko_document.h \
ekeko_input.h \
ekeko_event.h \
ekeko_value.h \
ekeko_element.h \
ekeko_attribute.h \
ekeko_class.h \
ekeko_canvas.h \
ekeko_renderable.h


include_HEADERS = \
Ekeko.h

installed_headersdir = $(prefix)/include/ekeko
installed_headers_DATA = $(EKEKOHEADERS)
