MAINTAINERCLEANFILES = Makefile.in

ENESIM_UTILHEADERS = \
enesim_converter.h \
enesim_core.h \
enesim_drawer.h \
enesim_rectangle.h \
enesim_rasterizer.h \
enesim_surface.h \
enesim_transformer.h \
enesim_renderer.h \
fixed_16p16.h \
fixed_math.h

installed_headersdir = $(prefix)/include/enesim
installed_headers_DATA = $(ENESIM_UTILHEADERS)
include_HEADERS = Enesim.h
